@@ -3,10 +3,8 @@ package edu.colorado.phet.sugarandsaltsolutions.micro.view;
 
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
-import edu.colorado.phet.common.piccolophet.nodes.kit.ArrowButton;
 import edu.colorado.phet.common.piccolophet.nodes.kit.Kit;
 import edu.colorado.phet.common.piccolophet.nodes.kit.KitSelectionNode;
-import edu.colorado.phet.common.piccolophet.nodes.layout.VBox;
 import edu.colorado.phet.sugarandsaltsolutions.common.model.DispenserType;
 import edu.colorado.phet.sugarandsaltsolutions.common.view.WhiteControlPanelNode;
 import edu.umd.cs.piccolo.PNode;
@@ -21,7 +19,6 @@ import static edu.colorado.phet.sugarandsaltsolutions.common.view.SoluteControlP
  */
 public class MicroKitControlNode extends PNode {
     public final KitSelectionNode<DispenserRadioButtonSet> kitSelectionNode;
-    public final WhiteControlPanelNode soluteControlPanelNode;
 
     public MicroKitControlNode( final Property<Integer> selectedKit, final Property<DispenserType> dispenserType ) {
 
@@ -32,19 +29,13 @@ public class MicroKitControlNode extends PNode {
         String sucroseString = "<html>Sucrose<br>C<sub>12</sub>H<sub>22</sub>O<sub>11</sub></html>";
         String ethanolString = "<html>Ethanol<br>C<sub>2</sub>H<sub>5</sub>OH</html>";
         kitSelectionNode = new KitSelectionNode<DispenserRadioButtonSet>( selectedKit,
+                                                                          createTitle(),
                                                                           new Kit<DispenserRadioButtonSet>( new DispenserRadioButtonSet( dispenserType, new Item( sodiumChlorideString, SALT ), new Item( sucroseString, SUGAR ) ) ),
                                                                           new Kit<DispenserRadioButtonSet>( new DispenserRadioButtonSet( dispenserType, new Item( sodiumChlorideString, SALT ), new Item( calciumChlorideString, CALCIUM_CHLORIDE ) ) ),
                                                                           new Kit<DispenserRadioButtonSet>( new DispenserRadioButtonSet( dispenserType, new Item( sodiumChlorideString, SALT ), new Item( sodiumNitrateString, SODIUM_NITRATE ) ) ),
                                                                           new Kit<DispenserRadioButtonSet>( new DispenserRadioButtonSet( dispenserType, new Item( sucroseString, SUGAR ), new Item( ethanolString, ETHANOL ) ) )
         );
-        soluteControlPanelNode = new WhiteControlPanelNode( new VBox(
-
-                //Use a negative spacing to bring the arrow buttons up next to the title
-                -ArrowButton.ARROW_HEIGHT,
-                createTitle(),
-                kitSelectionNode
-        ) );
-        addChild( soluteControlPanelNode );
+        addChild( new WhiteControlPanelNode( kitSelectionNode ) );
 
         //When switching to a new kit, switch to a dispenser that is in the set (if not already selecting it).  If switching from a set that contains NaCl to a new set that also contains NaCl, then keep the selection
         selectedKit.addObserver( new VoidFunction1<Integer>() {
